--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						transporte de CARGA GENERAL.</p>
 
 
-					<p class="justificado">Que con fecha 1 de octubre de 2020 presentó
+					<p class="justificado">Que con fecha 25 de abril de 2025 presentó
 						solicitud de Autorización Expresa para circular por caminos y
 						puentes de Jurisdicción Federal, en configuración doblemente
 						articulada con el vehículo que se describe a continuación, por lo
